--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Welcome to shhjwu5's homepage!
-description: Feel free to keep an eye on my project status.
+description: This is the homepage of Hongjian Shi.
